--- a/css/style.scss
+++ b/css/style.scss
@@ -27,6 +27,7 @@
             color: #212529;
             text-align: left;
             background-color: #fff;
+            min-height: $min-height;
         }
         
         .header {
@@ -49,6 +50,7 @@
         
         a {
             color: rgb(32, 36, 40);
+            font-weight: 700;
             &.login-button {
                 color: #3a47df;
             }
@@ -105,7 +107,8 @@
         }
         
         ul.nav-default-tags {
-            height: 200px;
+            height: 100%;
+            max-height: 42vh;
             overflow-y: scroll;
             a.list-group-item {
                 text-decoration: none;
@@ -135,4 +138,10 @@
         
         .social-nav a svg {
             fill: rgb(100, 112, 125);
+        }
+        
+        .card-login {
+            background-color: rgb(249, 250, 250);
+            color: #202428;
+            box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
         }
