versión con posts - wom

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
+@charset "UTF-8";
 [class^=crayons],
 [class^=crayons]::before,
 [class^=crayons]::after,
 [class^=crayons] *,
 [class^=crayons] ::before,
 [class^=crayons] ::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -23,8 +23,7 @@ body {
 .header {
   height: 56px;
   background-color: white;
-  -webkit-box-shadow: 0 1px 1px #0000001a;
-          box-shadow: 0 1px 1px #0000001a;
+  box-shadow: 0 1px 1px #0000001a;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -36,8 +35,7 @@ body {
 .input-search:active {
   background-color: white;
   border-color: #3b49df;
-  -webkit-box-shadow: 1px 1px 0 #3b49df;
-          box-shadow: 1px 1px 0 #3b49df;
+  box-shadow: 1px 1px 0 #3b49df;
 }
 
 a {
@@ -50,7 +48,6 @@ a.login-button {
 a.login-button:hover {
   background-color: #00000009;
   border-color: #00000000;
-  -webkit-box-shadow: none;
   box-shadow: none;
   color: #323ebe;
   z-index: 1;
@@ -58,7 +55,6 @@ a.login-button:hover {
 a.blue-button:hover {
   background-color: #323ebe;
   color: #edeeee;
-  -webkit-box-shadow: 0 2px 5px;
   box-shadow: 0 2px 5px;
 }
 a.btn {
@@ -67,14 +63,12 @@ a.btn {
 a.blue-button {
   color: white;
   background-color: #3846D5;
-  -webkit-box-shadow: 0 1px 3px;
   box-shadow: 0 1px 3px;
   border: #00000000;
 }
 a.login-button:hover {
   background-color: #00000009;
   border-color: #00000000;
-  -webkit-box-shadow: none;
   box-shadow: none;
   color: #323ebe;
   z-index: 1;
@@ -122,8 +116,7 @@ ul.nav-default-tags a.list-group-item span.follow-tag {
   position: absolute;
   right: 5px;
   top: 47%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 ul.nav-default-tags a.list-group-item:hover span.follow-tag {
   display: inline-block !important;
@@ -136,6 +129,102 @@ ul.nav-default-tags a.list-group-item:hover span.follow-tag {
 .card-login {
   background-color: #f9fafa;
   color: #202428;
-  -webkit-box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
-          box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
-}/*# sourceMappingURL=style.css.map */
+  box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.05);
+}
+
+/************SECCION DE POSTS****************/
+/* ESTILOS DE BARRA DE NAVEGACION DE POSTS -SECCIÓN CENTRAL*/
+.nav-link {
+  font-size: 16px;
+  margin: 3px;
+  color: #222020 !important;
+  font-weight: 100;
+}
+
+.nav-link:active {
+  border-bottom: 2px solid blue;
+}
+
+.nav-link:hover {
+  font-weight: 400;
+  border-radius: 5px;
+  background-color: #dfe4ea;
+  color: #323ebe !important;
+}
+
+.navbar-nav {
+  text-align: right;
+  margin-right: 15px;
+}
+
+.bar-header .navbar-toggler {
+  padding-left: 15px;
+  font-weight: 300;
+  font-size: 15px;
+  outline: none !important;
+  border: none !important;
+}
+
+.navbar .dev-to-button {
+  border-radius: 5px;
+  border: 1px solid grey;
+  /* box-shadow: 5px 5px blue;*/
+  padding: 5px 15px 5px 15px;
+}
+
+@media only screen and (max-width: 991px) {
+  .nav-link:hover {
+    background-color: none;
+  }
+}
+/*FIN DE ESTILOS DE BARRA DE NAVEGACION DE POSTS*/
+/***************estilos de las cards********/
+.card .card-body .card-title {
+  align-items: center;
+}
+.card .card-body .card-title img {
+  border-radius: 100%;
+  margin-right: 1rem;
+}
+.card .card-body .card-title h6 {
+  font-size: 1rem;
+}
+.card .card-body .card-title p {
+  font-size: 0.875rem;
+  margin: 0 0;
+}
+
+.card {
+  margin-bottom: 8px;
+}
+
+.card-body a {
+  color: black;
+  text-decoration: none;
+}
+
+.posts-links a, p, button {
+  color: #64707d;
+  font-size: 0.8rem;
+  font-weight: 100;
+}
+
+.posts-links a:hover {
+  text-decoration: none;
+  text-align: center;
+  background-color: #f1f2f6;
+  color: #323ebe;
+  border-radius: 5px;
+}
+
+.info-links p {
+  text-align: center;
+}
+
+.posts-links {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
+}
+
+/**************FIN DE SECCION DE POSTS**********//*# sourceMappingURL=style.css.map */
